/*
 * $Id: ChangeLog,v 1.4494 2005/10/24 01:02:46 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-23 18:21 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/pp/ppcore.c
    ! Fixed 3 bugs related to processing of extended strings (E"")

  * include/hbstack.h
  * source/vm/estack.c
    * Corrected HB_EXPORT usage

  * xharbour/include/hashapi.h
  * xharbour/source/vm/hash.c
    * Exported hb_hashSetCaseMatch()

2005-10-24 02:54 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  + xharbour/include/hbvmopt.h
  * xharbour/include/hbapi.h
  * xharbour/include/hbstack.h
  * xharbour/include/hbvmpub.h
  * xharbour/include/thread.h
  * xharbour/contrib/gtwvw/gtwvw.c
  * xharbour/source/ct/ctnet.c
  * xharbour/source/ct/ctwin.c
  * xharbour/source/ct/datetime.c
  * xharbour/source/ct/dattime2.prg
  * xharbour/source/ct/dbftools.c
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
  * xharbour/source/rdd/hbsix/Makefile
  * xharbour/source/rdd/hbsix/sxcompr.c
  * xharbour/source/rdd/hbsix/sxcrypt.c
  * xharbour/source/rdd/hbsix/sxdate.c
  * xharbour/source/rdd/hsx/hsx.c
  * xharbour/source/rdd/nulsys/Makefile
  * xharbour/source/rdd/nulsys/nulsys.prg
  * xharbour/source/rtl/bkgtsks.c
  * xharbour/source/rtl/console.c
  * xharbour/source/rtl/direct.c
  * xharbour/source/rtl/errorsys.prg
  * xharbour/source/rtl/fparse.c
  * xharbour/source/rtl/gtapi.c
  * xharbour/source/rtl/hbserv.c
  * xharbour/source/rtl/philes.c
  * xharbour/source/rtl/pplib.c
  * xharbour/source/rtl/regex.c
  * xharbour/source/rtl/tprinter.c
  * xharbour/source/rtl/trim.c
  * xharbour/source/rtl/version.c
  * xharbour/source/rtl/gtnul/gtext.c
  * xharbour/source/rtl/gtwvt/gtwvt.c