@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4494 2005/10/24 01:02:46 druzus Exp $
+ * $Id: ChangeLog,v 1.4495 2005/10/24 01:23:00 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-23 19:12 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * contrib/libnf/fttext.c
+    * Removed direct use of HB_VM_STACK and fixed compilation
 
 2005-10-23 18:21 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   * source/pp/ppcore.c
